# micropolis

./: LICENSE
res/: tk.tcl  wish.tcl
src/: CMakeLists.txt
src/XpmFileData/: CMakeLists.txt  XpmFileData.c  XpmFileData.h  xpmtest.c
src/sim/: CMakeLists.txt  g_bigmap.c  g_map.c  g_setup.c  g_smmaps.c  makefile  random.c  s_alloc.c  s_disast.c  s_eval.c  s_fileio.c  s_gen.c  s_init.c  s_msg.c  s_sim.c  s_traf.c  sim.c  w_budget.c  w_date.c  w_editor.c  w_eval.c  w_graph.c  w_inter.c  w_keys.c  w_map.c  w_piem.c  w_resrc.c  w_sim.c  w_sound.c  w_sprite.c  w_stubs.c  w_tk.c  w_tool.c  w_update.c  w_util.c  w_x.c
src/sim/headers/: g_ani.h  g_bigmap.h  g_map.h  g_setup.h  g_smmaps.h  rand.h  s_alloc.h  s_disast.h  s_eval.h  s_fileio.h  s_gen.h  s_init.h  s_msg.h  s_power.h  s_sim.h  s_traf.h  s_zone.h  sim.h  view.h  w_budget.h  w_con.h  w_date.h  w_editor.h  w_eval.h  w_graph.h  w_resrc.h  w_sound.h  w_sprite.h  w_stubs.h  w_tk.h  w_tool.h  w_update.h  w_util.h  w_win.h  w_x.h  win_preserv.h  win_view.h
src/sim/terrain/: mapgener.c
src/tcl/: CMakeLists.txt  tcltest.c  tclunxst.c
src/tclx/: config.mk
src/tclx/src/: tclxgdat.y  tclxint.h
src/tclx/tcllib/: CMakeLists.txt
src/tclx/tclsrc/: CMakeLists.txt
src/tclx/ucbsrc/: CMakeLists.txt
src/tk/: CMakeLists.txt  makefile  tkargv.c  tkevent.c
src/winsim/: CMakeLists.txt  g_ani.c  g_cam.c  rand.c  s_alloc.c  s_power.c  s_scan.c  s_zone.c  w_con.c  w_no_tk.c  w_resrc.c  w_x_no_x.c  win_budget.c  win_cmds.c  win_date.c  win_editor.c  win_eval.c  win_graph.c  win_ink.c  win_inter.c  win_keys.c  win_map.c  win_preserv.c  win_sim.c  win_sim_cmds.c  win_sound.c  win_sprite.c  win_stubs.c  win_tool.c  win_update.c  win_util.c  wing_bigmap.c  wing_map.c  wing_setup.c  wing_smmaps.c  wins_disast.c  wins_fileio.c  wins_gen.c  wins_init.c  wins_msg.c  (+2 more)
src/winsim/headers/: animtab.h  g_ani.h  g_map.h  g_setup.h  mac.h  macros.h  rand.h  s_alloc.h  s_disast.h  s_eval.h  s_power.h  s_scan.h  s_traf.h  sim.h  w_budget.h  w_editor.h  w_graph.h  w_keys.h  w_map.h  w_resrc.h  w_sim.h  w_sound.h  w_sprite.h  w_stubs.h  w_update.h  w_util.h  w_win.h  w_x.h  win_preserv.h  win_view.h
src/xstubs/: CMakeLists.txt  xstubs.c
